First part of club soda done, rectangle and phone aligned correctly

--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -5,6 +5,9 @@ footer {
   color: white;
   display: flex;
   justify-content: space-between;
+  position: relative;
+  bottom: 0;
+  width: 100%;
   a {
     color: #e57a15;
   }
